--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,8 @@ jobs:
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Set up QEMU for multi-platform Docker build
       uses: docker/setup-qemu-action@v2
+    - name: Set up Docker Buildx for multi-platform Docker build
+      uses: docker/setup-buildx-action@v2
     - name: Build and push the Docker image
       uses: docker/build-push-action@v4
       with:
