--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,14 +17,16 @@ jobs:
           tar xf hub-tool-linux-amd64.tar.gz
           mv hub-tool hub-tool-dist
           mv hub-tool-dist/hub-tool ./
-          find / -name expect
+      - name: Install Pexpect PyPI package
+        run: pip3 install pexpect
       - name: Log in to Docker Hub
-        shell: expect
+        shell: python3
         run: |
-          spawn ./hub-tool login andych
-          expect "Password:"
-          send "${{ secrets.DOCKERHUB_TOKEN }}\n"
-          interact
+          import pexpect
+          child = pexpect.spawn('./hub-tool login andych')
+          child.expect("Password:")
+          child.sendline("${{ secrets.DOCKERHUB_TOKEN }}")
+          child.interact()
       - name: Get a list of Hashicorp Packer versions
         id: hashicorp_versions
         run: echo "value=$(./hub-tool tag ls --all --format json hashicorp/packer)" >> "${GITHUB_OUTPUT}"
@@ -33,7 +35,7 @@ jobs:
         run: echo "value=$(./hub-tool tag ls --all --format json andych/packer-ansible)" >> "${GITHUB_OUTPUT}"
       - name: Evaluate packer versions to build
         id: build_versions
-        shell: python
+        shell: python3
         run: |
           import os
           import json
