Specify the build job needs the setup job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -52,6 +52,8 @@ jobs:
               json.dump(build_versions, fo)
   build:
     runs-on: ubuntu-latest
+    needs:
+      - setup
     strategy:
       fail-fast: false
       matrix:
