--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,7 +46,8 @@ jobs:
           hashicorp_versions = set([version['Name'].split(':')[1] for version in hashicorp_versions])
           my_versions = set([version['Name'].split(':')[1] for version in my_versions])
           build_versions = hashicorp_versions - my_versions
-          build_versions.add('latest')
+          if build_versions:
+              build_versions.add('latest')
           build_versions = list(build_versions)
           print(build_versions)
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fo:
