--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -57,6 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - setup
+    if: needs.setup.outputs.packer_versions != '[]'
     strategy:
       fail-fast: false
       matrix:
