--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,13 +43,13 @@ jobs:
               hashicorp_versions = json.load(fo)
           with open('/tmp/my_versions.json') as fo:
               my_versions = json.load(fo)
-          my_versions = []
           hashicorp_versions = set([version['Name'].split(':')[1] for version in hashicorp_versions])
           my_versions = set([version['Name'].split(':')[1] for version in my_versions])
           build_versions = hashicorp_versions - my_versions
           if build_versions:
               build_versions.add('latest')
           build_versions = list(build_versions)
+          build_versions = ['full-1.7.6']
           print(build_versions)
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fo:
               fo.write('value=')
